--- a/log.org
+++ b/log.org
@@ -21,9 +21,9 @@
 | Rishabh Sharma          |             | BMC202144 |          | 18:50 | 03.01.23 | Munkres                          | Topology                                     |      28.04.23 |
 | Shrimadhi Srikanth      |             | BMC202167 |          | 18:50 | 03.01.23 | Munkres                          | Topology                                     |               |
 | Naveen Surya            | naveensurya |           |          | 18:50 | 03.01.23 | Munkres                          | Topology                                     |               |
-| Priyangshu Ghosh        |             | BMC202240 |          | 19:28 | 11.01.23 | Apostol                          | Mathematical Analysis                        |               |
-| Priyangshu Ghosh        |             | BMC202240 |          | 19:28 | 11.01.23 | Herstein                         | Topics in Algebra                            |               |
-| Srinivas                |             | MCS202109 |          | 21:06 | 11.01.23 | J.R.R Tolkein                    | The Hobbit                                   |               |
+| Priyangshu Ghosh        |             | BMC202240 |          | 19:28 | 11.01.23 | Apostol                          | Mathematical Analysis                        |      30.04.23 |
+| Priyangshu Ghosh        |             | BMC202240 |          | 19:28 | 11.01.23 | Herstein                         | Topics in Algebra                            |      30.04.23 |
+| Srinivas                |             | MCS202109 |          | 21:06 | 11.01.23 | J.R.R Tolkein                    | The Hobbit                                   |      30.04.23 |
 | Bhavya Sangwan          |             | BMP202104 |          | 22:55 | 12.01.23 | Arthur Engel                     | Problem-Solving Strategies                   |               |
 | Bhavya Sangwan          |             | BMP202104 |          | 22:55 | 12.01.23 | Jenkins, White                   | Fundamentals of Optics                       |               |
 | Bhavya Sangwan          |             | BMP202104 |          | 22:55 | 12.01.23 | Hatcher                          | Algebraic Topology                           |               |
@@ -33,7 +33,7 @@
 | T Karthik Rajendra      |             | BMC202046 |          | 18:23 | 25.02.23 | Cormen, Leiserson, Rivest, Stein | Introductin to Algorithms                    |      28.04.23 |
 | T Karthik Rajendra      |             | BMC202046 |          | 18:23 | 25.02.23 | Aho, Lam, Sethi, Ullman          | Compilers - Principles, Techniques and Tools |      01.04.23 |
 | Atharva Raje            |             | MMA202202 |          | 18:40 | 25.02.23 | John B. Conway                   | Functions of One Complex Variable            |      28.04.23 |
-| Vedant Neema            |             | BMP202208 |          | 18:48 | 25.02.23 | Walter Rudin                     | Principles of Mathematical Analysis          |               |
+| Vedant Neema            |             | BMP202208 |          | 18:48 | 25.02.23 | Walter Rudin                     | Principles of Mathematical Analysis          |      30.04.23 |
 | Ishaan Verman           |             | BMP202126 |          | 18:35 | 18.03.23 | Keith D. Cooper, Linda Torczon   | Engineering a Compiler                       |               |
 | Swaminathan Rajagopalan |             | BMC202184 |          | 19:46 | 21.03.23 | P.G. Wodehouse                   | The World of Psmith (omnibus)                |      28.04.23 |
 | Anhad Chaturvedi        |             |           |          |     * |        * | Feynman, Leighton, Sands         | The Feynman Lectures on Physics Volume 2     |               |
